Edited Team informations

--- a/team.html
+++ b/team.html
@@ -1036,7 +1036,7 @@
                 <div class="span4 aligncenter">
                   <h6><b>Natan Rodrigues de Oliveira </b></h6>
                   <p><b>Undergraduate Researcher</b></p>
-                  <p><i>luan at ggaunicamp.com</i></p>
+                  <p><i>natrodrigues at ggaunicamp.com</i></p>
                 </div>
               </div>
               <p style="text-align: justify;">
