--- a/team.html
+++ b/team.html
@@ -681,7 +681,36 @@
           <!-- End span -->
 		</div>
         <!-- End row -->
-      
+	
+	<div class="row">	
+	
+		<div class="span6">
+            <div class="team-box thumbnail">
+              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
+                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
+                  <img
+                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
+                    src="img/hpg/people/guilherme.vin.jpg" />
+                </div>
+                <div class="span4 aligncenter">
+                  <h6><b>Guilherme Vinicius de Almeida Silva</b></h6>
+                  <p><b>System Administrator</b></p>
+                  <p><i>guivas at ggaunicamp.com</i></p>
+                  <p>
+                    <a href="http://lattes.cnpq.br/6172928271262782" target="_blank">Lattes</a>
+                  </p>
+                </div>
+              </div>
+              <p style="text-align: justify;">
+                
+				Information Technology Management at Pontifical Catholic University of Campinas (PUC Campinas)
+              </p>
+            </div>
+          </div>
+          <!-- End span -->
+        </div>
+ 
+        <!-- End row -->   
         <!-- End of Staff -->
 
         <!-- Post docs -->
