--- a/team.html
+++ b/team.html
@@ -341,7 +341,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/joao_web.png" />
+                    src="img/hpg/people/joao.renato.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>João Renato Domingos do Sacramento</b></h6>
