--- a/projects.html
+++ b/projects.html
@@ -165,16 +165,16 @@
                 </div>
                 <div class="span10">
                   <h6 style="text-align: justify;"><b>Development and practical application of processing techniques,
-                      regularization, and imaging in the prestack domain based on 3D HPC CRS</b></h6>
+                      regularization, and imaging in the pre-stack domain based on 3D HPC CRS</b></h6>
                 </div>
               </div>
               <p style="text-align: justify;">In this project we are generalizing the Common Reflection Surface (CRS)
-                techniques developed on the last project to the prestack domain, and applying it to several important
+                techniques developed on the last project to the pre-stack domain, and applying it to several important
                 seismic imaging problems. Such problems include 5D Regularization, 3D Common Reflection Point
                 Migration, Normal Incidence Point Tomography, Image Incident Point and Stereotomography. We are also
                 developing an Anisotropic CRS. All these techniques are being developed over our SeisHPC framework,
                 which will provide scalability and fault tolerance for very large problems on heterogeneous clusters of
-                computers. This is a three-year project that started back in February 2016.
+                computers.
               </p>
             </div>
           </div>
@@ -229,10 +229,8 @@
                 Reflection Surface (CRS) method and (2) the application of modern signal processing techniques,
                 common in medical imaging, radar, sonar and telecommunications. This project has as results the
                 following technologies: 2D/3D Common Reflection Surface (CRS) stacking software, developed using
-                high
-                performance computing (HPC) techniques and able to process 2D and 3D seismic data up to Terabytes.
-                A
-                compatible interface with the ProMax® package was also developed, along with a manual, allowing its
+                high performance computing (HPC) techniques and able to process 2D and 3D seismic data up to Terabytes.
+                A compatible interface with the ProMax® package was also developed, along with a manual, allowing its
                 use in production level; 2D/3D Normal Incidence Point (NIP) tomography software, constructing
                 velocity models for depth migration. Designed for parallel computing and with a ProMax® interface;
                 2D/3D CRS Post-stack Time Migration, final stages of development; Investigations of the latest
