--- a/team.html
+++ b/team.html
@@ -610,7 +610,7 @@
                   <p><b>Geophysics Ph.D. Student</b></p>
                   <p><i>ignaciogbd at ggaunicamp.com</i></p>
                   <p>
-                    <a href="#" target="_blank">Lattes</a>
+                    <a href="http://lattes.cnpq.br/9453562916732532" target="_blank">Lattes</a>
                   </p>
                 </div>
               </div>
