--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
   <title>Team</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Your page description here" />
-  <meta name="author" content="" />
+  <meta name="author" content="Paulo Torres" />
 
   <!-- css -->
   <link href="https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,600,700,800" rel="stylesheet">
@@ -497,31 +497,6 @@
           </div>          
          <!-- End span -->
              
-          <div class="span6">
-            <div class="team-box thumbnail">
-              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
-                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
-                  <img
-                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/naomi_takemoto.png" />
-                </div>
-                <div class="span4 aligncenter">
-                  <h6><b>Naomi Takemoto</b></h6>
-                  <p><b>Software Developer</b></p>
-                  <p><i>naomi at ggaunicamp.com</i></p>
-                  <p>
-                    <a href="http://lattes.cnpq.br/6119964128783599" target="_blank">Lattes</a>
-                  </p>
-                </div>
-              </div>
-              <p style="text-align: justify;">
-                Computer Engineering student at the Institute of Computing at the
-                University of Campinas (IC/UNICAMP)
-              </p>
-            </div>
-          </div>
-      <!-- End span -->
-
 		</div>
         <!-- End row -->
         <!-- End of Staff -->
