Added Rene to HPG Team

--- a/team.html
+++ b/team.html
@@ -496,7 +496,31 @@
             </div>
           </div>          
          <!-- End span -->
-             
+          
+	 <div class="span6">
+            <div class="team-box thumbnail">
+              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
+                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
+                  <img
+                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
+                    src="img/hpg/people/rene.png" />
+                </div>
+                <div class="span4 aligncenter">
+                  <h6><b>Rene Juliano Martins</b></h6>
+                  <p><b>Systems Development Analyst</b></p>
+                  <p><i>rene at ggaunicamp.com</i></p>
+                  <p>
+                    <a href="http://lattes.cnpq.br/1356207775633874" target="_blank">Lattes</a>
+                  </p>
+                </div>
+              </div>
+              <p style="text-align: justify;">
+                Systems Analysis at Pontifical Catholic University of Campinas (PUC Campinas)
+              </p>
+            </div>
+          </div>
+          <!-- End span -->
+		<!-- </div>-->
 		</div>
         <!-- End row -->
         <!-- End of Staff -->
