Added Joao's linkedin

--- a/team.html
+++ b/team.html
@@ -349,6 +349,7 @@
                   <p><i>joao.renato at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/2329150184550696" target="_blank">Lattes</a>
+                    <a href="http://www.linkedin.com/in/joaorenatods" target="_blank">LinkedIn</a>
                   </p>
                 </div>
               </div>
