Edited Gustavo informations

--- a/team.html
+++ b/team.html
@@ -486,7 +486,7 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Gustavo Barroso Dias Ignácio</b></h6>
-                  <p><b>Geophysics Ph.D. Student</b></p>
+                  <p><b>Researcher</b></p>
                   <p><i>ignaciogbd at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/9453562916732532" target="_blank">Lattes</a>
@@ -495,7 +495,6 @@
               </div>
               <p style="text-align: justify;">
                 PhD in Science and Petroleum Engineering at University of Campinas (FEM/UNICAMP).
-
               </p>
             </div>
           </div>
