Edited Tygel informations

--- a/team.html
+++ b/team.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Prof. Dr. Martin Tygel</b></h6>
-                  <p><b>Coordinator and Principal Investigator </b></p><br>
+                  <p><b>Coordinator</b></p><br>
                   <p><i>mtygel at gmail.com</i></p>
                   <p><a href="http://lattes.cnpq.br/7393825867830586" target="_blank">Lattes</a> <a
                       href="https://www.researchgate.net/profile/Martin_Tygel" target="_blank">ResearchGate</a> </p>
