--- a/team.html
+++ b/team.html
@@ -151,8 +151,10 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                PhD in Science and Petroleum Engineering at University of Campinas (FEM/UNICAMP).
-              </p><br><br><br><br>
+                Jorge H. Faccipieri Jr. received his M.S. (2012) and Ph.D. (2016) in Science and Petroleum Engineering at the University of Campinas (FEM/UNICAMP). 
+                In 2017, he joined the Center for Petroleum Studies (CEPETRO) at UNICAMP as a Researcher. 
+                In 2020, he became HPG Lab's  coordinator and also started to supervise CEPETRO's IT activities.
+              </p><br>
             </div>
           </div>
         </div>
@@ -265,8 +267,8 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                M.Sc. Student at Electrical Engineering at University of Campinas (FEEC/UNICAMP)
-              </p>
+                M.Eng. in Electrical Engineering at University of Campinas (FEEC/UNICAMP)
+              </p><br>
             </div>
           </div>
           <!-- End span -->
@@ -407,7 +409,7 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                Computer Engineering student at the Institute of
+                B.Eng. in Computer Engineering by Institute of
                 Computing at the University of Campinas (IC/UNICAMP)
               </p>
             </div>
@@ -555,7 +557,7 @@
             </div>
             <br>
             <address>
-              <strong>High Performance Geophysics Lab</strong><br>
+              <strong>High-Performance Geophysics Lab</strong><br>
               Cora Coralina 350 St, Cidade Universitária<br>
               Campinas/SP Brazil
             </address>
