--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,16 @@
         </div>
         <!-- End Row -->
 
-	<div class="row">               
+	
+
+        <div class="row">
+          <div class="span12">
+            <h2><strong>Past Projects</strong></h2>
+            <div class="solidline"></div>
+          </div>
+        </div>
+
+         <div class="row">               
          <div class="span12">
             <div class="team-box thumbnail">
               <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
@@ -129,8 +138,7 @@
                     src="img/hpg/projects/petrobras.png" />
                 </div>
                 <div class="span10">
-                  <h6 style="text-align: justify;"><b>High-Performance Geophysics lab computing infrastructure
-                      upgrade</b></h6>
+                  <h6 style="text-align: justify;"><b>High-Performance Geophysics lab computing infrastructure upgrade</b></h6>
                 </div>
               </div>
               <p style="text-align: justify;">In this project we are upgrading the high-performance computing
@@ -145,16 +153,9 @@
           <!-- End span -->
         </div>
         <!-- End Row -->
+        
 
-
-        <div class="row">
-          <div class="span12">
-            <h2><strong>Past Projects</strong></h2>
-            <div class="solidline"></div>
-          </div>
-        </div>
-
-               <div class="row">
+         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
               <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
@@ -310,7 +311,7 @@
             </div>
             <br>
             <address>
-              <strong>High Performance Geophysics Lab</strong><br>
+              <strong>High-Performance Geophysics Lab</strong><br>
               Cora Coralina 350 St, Cidade Universitária<br>
               Campinas/SP Brazil
             </address>
