--- a/technologies.html
+++ b/technologies.html
@@ -90,6 +90,132 @@
     <section id="content">
       <div class="container">
 
+      	 <!-- referncia para home -->
+        <span id="foStacking" class="anchor"></span>
+
+        <div class="row">
+          <div class="span12">
+            <h3><strong>Finite Offset (FO) Stacking and Regularization</strong></h3>
+            <div class="solidline"></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <h4><b>2D/3D Common Reflection Point (CRP) Regularization</b></h4>
+              <p style="text-align: justify;">
+                The 2D/3D CRP Regularization technology is based on Common-reflection-point (CRP) Trajectories. This
+                approach ensures that only the amplitudes related to the same reflection point are considered on the
+                regularization process, avoiding reflection-point dispersal on dipping reflectors.
+                <ul>
+                  <li>Based on CRP trajectories.</li>
+                  <li>Enhancement of events.</li>
+                  <li>Dataset regularization and interpolation.</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <h4><b>2D/3D Common Reflection Point (CRP) Spreading</b></h4>
+              <p style="text-align: justify;">
+                The 2D/3D CRP Spreading technology is based on Common-reflection-point (CRP) Trajectories allows for
+                reflection enhancement in prestack domain.
+                <ul>
+                  <li>Based on CRP trajectories.</li>
+                  <li>Noise attenuation.</li>
+                  <li>Enhancement of events.</li>
+                  <li>Correct conflicting dips.</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <h4><b>2D/3D Total Moveout Correction</b></h4>
+              <p style="text-align: justify;">
+                The 2D/3D Total Moveout Correction is a local NMO and DMO moveout correction applied to Common
+                Reflection Point (CRP) traveltime in prestack domain. This application is capable to convert all CMP
+                gathers to CRP gathers.
+                <ul>
+                  <li>Local moveout correction</li>
+                  <li>Converts CMP gathers to CRP gathers</li>
+                  <li>Allows for accurate AVO/AVA analysis</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- referncia para home -->
+        <span id="hpcAndCloud" class="anchor"></span>
+
+        <div class="row">
+          <div class="span12">
+            <h3><strong>HPC and Cloud Computing</strong></h3>
+            <div class="solidline"></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <h4><b>SPITZ Programming Framework</b></h4>
+              <p style="text-align: justify;">
+                SPITZ is the HPG's solution to bring modern software features and the best programming practices to a
+                wide range of HPC systems, from the legacy ones to the newest. We extracted the essence from most
+                seismic imaging software and created a complete distributed programming framework that is easy to use,
+                scalable, resilient, and dynamic in nature.
+                <ul>
+                  <li>Compatible with Cloud environments and legacy systems</li>
+                  <li>Removes the programming effort of handling with distributed computing environments</li>
+                  <li>Facilitates the development and debugging of new software</li>
+                  <li>Allows seamless aggregation of multiple computing systems to form a single computing mesh</li>
+                  <li>Handles node addition, removal, and failure automatically and on-the-fly</li>
+                  <li>Optimizes cost-benefit dynamically on heterogeneous systems like the Cloud</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- referncia para home -->
+        <span id="timeMigration" class="anchor"></span>
+
+        <div class="row">
+          <div class="span12">
+            <h3><strong>Time Migration</strong></h3>
+            <div class="solidline"></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <h4><b>2D/3D Common Reflection Point (CRP) Time Migration</b></h4>
+              <p style="text-align: justify;">
+                The 2D/3D CRP time migration performs a Kirchhoff-type time migration and velocity analysis with the use
+                of a Common-Reflection-Point (CRP) operator. Thus, a velocity model is obtained by analyzing CRP
+                trajectories and the summation is performed along the optimal CRP curve. Also, a small midpoint
+                aperture, associated with the projected Fresnel zone (PFZ), is employed for each midpoint, which
+                restricts the summation to that part of the CRP curve where only constructive interference occurs.
+                <ul>
+                  <li>Summation over the CRP curve.</li>
+                  <li>High-quality time-migrated results.</li>
+                  <li>Reduced aperture artifacts due to the small aperture needed.</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+
         <!-- referncia para home -->
         <span id="zoStacking" class="anchor"></span>
 
@@ -175,101 +301,7 @@
               </p>
             </div>
           </div>
-        </div>
-
-        <!-- referncia para home -->
-        <span id="foStacking" class="anchor"></span>
-
-        <div class="row">
-          <div class="span12">
-            <h3><strong>Finite Offset (FO) Stacking and Regularization</strong></h3>
-            <div class="solidline"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <div class="team-box thumbnail">
-              <h4><b>2D/3D Common Reflection Point (CRP) Regularization</b></h4>
-              <p style="text-align: justify;">
-                The 2D/3D CRP Regularization technology is based on Common-reflection-point (CRP) Trajectories. This
-                approach ensures that only the amplitudes related to the same reflection point are considered on the
-                regularization process, avoiding reflection-point dispersal on dipping reflectors.
-                <ul>
-                  <li>Based on CRP trajectories.</li>
-                  <li>Enhancement of events.</li>
-                  <li>Dataset regularization and interpolation.</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <div class="team-box thumbnail">
-              <h4><b>2D/3D Common Reflection Point (CRP) Spreading</b></h4>
-              <p style="text-align: justify;">
-                The 2D/3D CRP Spreading technology is based on Common-reflection-point (CRP) Trajectories allows for
-                reflection enhancement in prestack domain.
-                <ul>
-                  <li>Based on CRP trajectories.</li>
-                  <li>Noise attenuation.</li>
-                  <li>Enhancement of events.</li>
-                  <li>Correct conflicting dips.</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <div class="team-box thumbnail">
-              <h4><b>2D/3D Total Moveout Correction</b></h4>
-              <p style="text-align: justify;">
-                The 2D/3D Total Moveout Correction is a local NMO and DMO moveout correction applied to Common
-                Reflection Point (CRP) traveltime in prestack domain. This application is capable to convert all CMP
-                gathers to CRP gathers.
-                <ul>
-                  <li>Local moveout correction</li>
-                  <li>Converts CMP gathers to CRP gathers</li>
-                  <li>Allows for accurate AVO/AVA analysis</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- referncia para home -->
-        <span id="timeMigration" class="anchor"></span>
-
-        <div class="row">
-          <div class="span12">
-            <h3><strong>Time Migration</strong></h3>
-            <div class="solidline"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <div class="team-box thumbnail">
-              <h4><b>2D/3D Common Reflection Point (CRP) Time Migration</b></h4>
-              <p style="text-align: justify;">
-                The 2D/3D CRP time migration performs a Kirchhoff-type time migration and velocity analysis with the use
-                of a Common-Reflection-Point (CRP) operator. Thus, a velocity model is obtained by analyzing CRP
-                trajectories and the summation is performed along the optimal CRP curve. Also, a small midpoint
-                aperture, associated with the projected Fresnel zone (PFZ), is employed for each midpoint, which
-                restricts the summation to that part of the CRP curve where only constructive interference occurs.
-                <ul>
-                  <li>Summation over the CRP curve.</li>
-                  <li>High-quality time-migrated results.</li>
-                  <li>Reduced aperture artifacts due to the small aperture needed.</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-        </div>
+        </div>    
 
 
         <!-- referncia para home -->
@@ -299,38 +331,6 @@
           </div>
         </div>
 
-        <!-- referncia para home -->
-        <span id="hpcAndCloud" class="anchor"></span>
-
-        <div class="row">
-          <div class="span12">
-            <h3><strong>HPC and Cloud Computing</strong></h3>
-            <div class="solidline"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span12">
-            <div class="team-box thumbnail">
-              <h4><b>SPITZ Programming Framework</b></h4>
-              <p style="text-align: justify;">
-                SPITZ is the HPG's solution to bring modern software features and the best programming practices to a
-                wide range of HPC systems, from the legacy ones to the newest. We extracted the essence from most
-                seismic imaging software and created a complete distributed programming framework that is easy to use,
-                scalable, resilient, and dynamic in nature.
-                <ul>
-                  <li>Compatible with Cloud environments and legacy systems</li>
-                  <li>Removes the programming effort of handling with distributed computing environments</li>
-                  <li>Facilitates the development and debugging of new software</li>
-                  <li>Allows seamless aggregation of multiple computing systems to form a single computing mesh</li>
-                  <li>Handles node addition, removal, and failure automatically and on-the-fly</li>
-                  <li>Optimizes cost-benefit dynamically on heterogeneous systems like the Cloud</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -348,7 +348,7 @@
             </div>
             <br>
             <address>
-              <strong>High Performance Geophysics Lab</strong><br>
+              <strong>High-Performance Geophysics Lab</strong><br>
               Cora Coralina 350 St, Cidade Universitária<br>
               Campinas/SP Brazil
             </address>
