--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <br>
             <address>
-              <strong>High Performance Geophysics Lab</strong><br>
+              <strong>High-Performance Geophysics Lab</strong><br>
               Cora Coralina 350 St, Cidade Universitária<br>
               Campinas/SP Brazil
             </address>
