--- a/formerteam.html
+++ b/formerteam.html
@@ -247,7 +247,6 @@
                 <div class="span4 aligncenter">
                   <h6><b>Naomi Takemoto</b></h6>
                   <p><b>Software Developer</b></p>
-                  <p><i>naomi at ggaunicamp.com</i></p>
                 </div>
               </div>
             </div>
@@ -448,7 +447,7 @@
             <div class="widget">
               <h5 class="widgetheading">Get in touch</h5>
               <p>
-                <i class="icon-phone"></i> +55 19 3521-1208<br>
+                <i class="icon-phone"></i> +55 19 3521-1208 (<b>Temporarily unavailable</b>. Working remotely due to Covid-19 pandemic)<br>
                 <i class="icon-envelope-alt"></i> <a href="mailto:admin@ggaunicamp.com"
                   target="_top">admin@ggaunicamp.com</a>
               </p>
