--- a/formerteam.html
+++ b/formerteam.html
@@ -502,7 +502,7 @@
           <div class="span4 offset5">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.7181184567303!2d-47.07003238451434!3d-22.812906485059642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8c15274582707%3A0xedbefbe7d570408c!2sCEPETRO+-+Centro+de+Estudos+de+Petr%C3%B3leo!5e0!3m2!1spt-BR!2sbr!4v1550787637174"
-              width="100" height="206" frameborder="0" style="border:0" allowfullscreen></iframe>
+              width="100%" height="206" frameborder="0" style="border:0" allowfullscreen></iframe>
             <br />
           </div>
         </div>
