--- a/formerteam.html
+++ b/formerteam.html
@@ -186,7 +186,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/semFoto.png" />
+                    src="img/hpg/people/leticia.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Letícia Prado de Araujo</b></h6>
@@ -203,12 +203,11 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/semFoto.png" />
+                    src="img/hpg/people/luiz.eduardo.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Luiz Eduardo Gonçalves</b></h6>
                   <p><b>Undergraduate Researcher</b></p>
-                  <p><i>luiz at ggaunicamp.com</i></p>
                 </div>
               </div>
               <p style="text-align: justify;">
@@ -385,7 +384,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/semFoto.png" />
+                    src="img/hpg/people/thiago.dong.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Thiago Dong Chen</b></h6>
