Added Former Team Members tab

--- a/formerteam.html
+++ b/formerteam.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FormerTeam</title>
+  <title>Former Team</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Your page description here" />
   <meta name="author" content="" />
@@ -64,8 +64,11 @@
                     <li>
                       <a href="projects.html">Projects </a>
                     </li>
+                    <li>
+                    <a href="team.html">Team Members</a>
+                    </li>
                     <li class="active">
-                      <a href="team.html">Team </a>
+                      <a href="formerteam.html">Former Team Members</a>
                     </li>
                     <li>
                       <a href="publications.html">Publications </a>
@@ -146,7 +149,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/Marcela.png" />
+                    src="img/hpg/people/marcela.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Marcela Liberato Silva</b></h6>
@@ -163,7 +166,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/Gabriel.png" />
+                    src="img/hpg/people/gabriel.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Gabriel Batista Moura</b></h6>
