--- a/technologies.html
+++ b/technologies.html
@@ -65,7 +65,10 @@
                       <a href="projects.html">Projects </a>
                     </li>
                     <li>
-                      <a href="team.html">Team </a>
+                      <a href="team.html">Team Members </a>
+                    </li>
+                    <li>
+                      <a href="formerteam.html">Former Team Members</a>
                     </li>
                     <li>
                       <a href="publications.html">Publications </a>
