--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,10 @@
                       <a href="projects.html">Projects </a>
                     </li>
                     <li>
-                      <a href="team.html">Team </a>
+                      <a href="team.html">Team Members</a>
+                    </li>
+                    <li>
+                      <a href="formerteam.html">Former Team Members</a>
                     </li>
                     <li class="active">
                       <a href="publications.html">Publications </a>
