--- a/team.html
+++ b/team.html
@@ -146,6 +146,29 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
+                    src="img/hpg/people/martin_web.png" />
+                </div>
+                <div class="span4 aligncenter">
+                  <h6><b>Dr. Martin Tygel</b></h6>
+                  <p><b>Invited Researcher</b></p>
+                  <p><i>mtygel at gmail.com</i></p>
+                  <p><a href="http://lattes.cnpq.br/7393825867830586" target="_blank">Lattes</a> <a
+                      href="https://www.researchgate.net/profile/Martin_Tygel" target="_blank">ResearchGate</a> </p>
+                </div>
+              </div>
+              <p style="text-align: justify;">M.S. (1976) and Ph.D. (1979) degrees in mathematics from Stanford University (Stanfor.
+                
+             </p>
+            </div>
+          </div>   
+                    <!-- End span -->
+
+           <div class="span6">
+            <div class="team-box thumbnail">
+              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
+                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
+                  <img
+                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
                     src="img/hpg/people/tiago_web.png" />
                 </div>
                 <div class="span4 aligncenter">
@@ -167,28 +190,6 @@
           </div>
           <!-- End span -->
 
-        <div class="span6">
-            <div class="team-box thumbnail">
-              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
-                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
-                  <img
-                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/martin_web.png" />
-                </div>
-                <div class="span4 aligncenter">
-                  <h6><b>Dr. Martin Tygel</b></h6>
-                  <p><b>Invited Researcher</b></p>
-                  <p><i>mtygel at gmail.com</i></p>
-                  <p><a href="http://lattes.cnpq.br/7393825867830586" target="_blank">Lattes</a> <a
-                      href="https://www.researchgate.net/profile/Martin_Tygel" target="_blank">ResearchGate</a> </p>
-                </div>
-              </div>
-              <p style="text-align: justify;">M.S.(1976) and Ph.D. (1979) degrees in mathematics from Stanford University.
-                In 1983.
-             </p>
-            </div>
-          </div>   
-                    <!-- End span -->
         </div>
         <!-- End row -->
 
