--- a/team.html
+++ b/team.html
@@ -156,7 +156,7 @@
                       href="https://www.researchgate.net/profile/Martin_Tygel" target="_blank">ResearchGate</a> </p>
                 </div>
               </div>
-              <p style="text-align: justify;">M.S. (1976) and Ph.D. (1979) degrees in mathematics from Stanford University (Stanfor.
+              <p style="text-align: justify;">M.S. (1976) and Ph.D. (1979) degrees in mathematics from Stanford University in United States
                 
              </p>
             </div>
