--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
 
         <div class="row">
           <div class="span12">
-            <h3><strong>Coordinators</strong></h3>
+            <h3><strong>Coordinator</strong></h3>
             <div class="solidline"></div>
           </div>
         </div>
@@ -106,7 +106,7 @@
                 <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
                   <img
                     style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
-                    src="img/hpg/people/jorge_web.png" />
+                    src="img/hpg/people/jorge.png" />
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Dr. Jorge H. Faccipieri Junior</b></h6>
