--- a/publications.html
+++ b/publications.html
@@ -137,6 +137,7 @@
     <a href="#n1984"> 1984 </a> &nbsp;
     <a href="#n1981"> 1981 </a> &nbsp; -->
             <!-- </div> -->
+            
             <!-- 2021 -->
             <span id="n2021 class="anchor"></span>
             <h3 class="page-header">
@@ -149,15 +150,36 @@
             </h3>
             <h6><b>Peer-reviewed Papers</b></h6>
 
+			<p align="justify">
+                <a href="https://doi.org/10.1111/1365-2478.13158" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                OKITA, NICHOLAS T. ; CAMARGO, ALEXANDRE W. ; RIBEIRO, JOSÉ ; COIMBRA, TIAGO A. ; BENEDICTO, CAIAN; FACCIPIERI, JORGE H. . High-performance computing strategies for seismic-imaging software on the cluster and cloud-computing environments. GEOPHYSICAL PROSPECTING, v. 70, p. 57-78, 2021.
 
+	    </p>
 
             <p align="justify">
+                <a href="https://doi.org/10.3997/1365-2397.fb2021054" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                OKITA, NICHOLAS T. ; Coimbra, Tiago A. . Cloud-computing approach for an environmental, social, and corporate governance focus in universities and businesses. FIRST BREAK, v. 39, p. 63-70, 2021.
+	    </p>
+
+	   <p align="justify">
                 <a href="http://dx.doi.org/10.1190/INT-2020-0094.1" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
                 OKITA, NICHOLAS T. ; Coimbra, Tiago A. . Faster and cheaper: How graphics processing units on spot-market instances minimize turnaround time and budget. Interpretation-A Journal of Subsurface Characterization, v. 9, p. SA1-SA16, 2021.
             </p>
 
-
-
+	    
+	   <p align="justify">
+                <a href="http://dx.doi.org/10.22564/rbgf.v38i2.2048" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                OKITA, NICHOLAS TORRES; COIMBRA, TIAGO A. ; RIBEIRO, JOSÉ ; TYGEL, MARTIN . Extending the usage of graphics processing units on the cloud for cost savings on seismic data regularization. Revista Brasileira de Geofísica (Impresso), v. 38, p. 1-14, 2021.
+                </p>
+	
+	<p align="justify">
+                <a href="http://dx.doi.org/10.22564/rbgf.v38i3.2059" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                RIBEIRO, JOSÉ ; Coimbra, Tiago A. ; OKITA, NICHOLAS T. ; IGNÁCIO, GUSTAVO B. ; TYGEL, MARTIN . Using adaptive differential evolution algorithm to improve parameter estimation in seismic processing: extended results. Revista Brasileira de Geofísica (Impresso), v. 38, p. 1-11, 2021.
+                </p>
+	<p align="justify">
+                <a href="https://doi.org/10.3997/1365-2397.fb2021073" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                RUEDA, S. DANY ; SOUZA, TAINÁ ; FACCIPIERI, JORGE H. ; TYGEL, MARTIN . Recovering elevation in seismic datasets using Google Earth: A case study of Parnaíba Basin. FIRST BREAK, v. 39, p. 37-42, 2021.
+                </p>
             <!-- 2020 -->
             <span id="n2020" class="anchor"></span>
             <h3 class="page-header">
