Added Google Anlytics Script

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
   <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png" />
   <link rel="shortcut icon" href="ico/favicon.png" />
 
+  <!-- Google Analytics-->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JMGM3TZ8XD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JMGM3TZ8XD');
+</script>
+
   <!-- =======================================================
     Theme Name: Eterna
     Theme URL: https://bootstrapmade.com/eterna-free-multipurpose-bootstrap-template/
