Added new publication

--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,7 @@
 
             <div class="row" style="margin: 0%; padding-left: -25px;">
                 <span id="indice" class="anchor"></span>
+                <a href="#n2022"> 2022 </a> &nbsp;
                 <a href="#n2021"> 2021 </a> &nbsp;
                 <a href="#n2020"> 2020 </a> &nbsp;
                 <a href="#n2019"> 2019 </a> &nbsp;
@@ -137,9 +138,27 @@
     <a href="#n1984"> 1984 </a> &nbsp;
     <a href="#n1981"> 1981 </a> &nbsp; -->
             <!-- </div> -->
+
+            <span id="n2022" class="anchor"></span>
+            <h3 class="page-header">
+                <strong>2022</strong><small>
+                    <a href="#indice" style="padding-left: 20px">
+                        Back to
+                        top
+                    </a>
+                </small>
+            </h3>
+            <h6><b>Conference Papers</b></h6>
+
+            <p align="justify">
+                <a href="https://doi.org/10.3997/2214-4609.2022.80001" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
+                BENEDICTO, C. ; OKITA, N. ; FACCIPIERI, J. . Increasing IO throughput in seismic with NFS over RDMA and NVIDIA GPUDirect Storage. In: Third EAGE Workshop on HPC in Americas, 2022, Online. Third EAGE Workshop on HPC in Americas, 2022. p. 1.
+
+        </p>
+
             
             <!-- 2021 -->
-            <span id="n2021 class="anchor"></span>
+            <span id="n2021" class="anchor"></span>
             <h3 class="page-header">
                 <strong>2021</strong><small>
                     <a href="#indice" style="padding-left: 20px;">
@@ -148,7 +167,7 @@
                     </a>
                 </small>
             </h3>
-            <h6><b>Peer-reviewed Papers</b></h6>
+             <h6><b>Peer-reviewed Papers</b></h6>
 
 			<p align="justify">
                 <a href="https://doi.org/10.1111/1365-2478.13158" target="_blank"><img src="img/hpg/icon_doi.gif"></a>
