--- a/team.html
+++ b/team.html
@@ -156,8 +156,7 @@
                       href="https://www.researchgate.net/profile/Martin_Tygel" target="_blank">ResearchGate</a> </p>
                 </div>
               </div>
-              <p style="text-align: justify;">M.S. (1976) and Ph.D. (1979) degrees in mathematics from Stanford University in United States
-                
+              <p style="text-align: justify;">Founder and HPG Lab's coordinator from 2013 to 2019. Latin America Honorary Lecturer of the Society of Exploration Geophysicists (2017). In 2016, became a Permanent Member of the Brazilian Academy of Sciences (ABC). Ph.D. (1979) in mathematics from Stanford University (USA).
              </p>
             </div>
           </div>   
@@ -185,7 +184,7 @@
               <p style="text-align: justify;">
                 PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at
                 University of Campinas (IMECC/UNICAMP).
-              </p>
+              </p><br><br>
             </div>
           </div>
           <!-- End span -->
@@ -213,7 +212,7 @@
               <p style="text-align: justify;">
                 PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at
                 University
-                of Campinas (IMECC/UNICAMP)
+                of Campinas (IMECC/UNICAMP).
               </p>
             </div>
           </div>
@@ -236,7 +235,7 @@
               </div>
               <p style="text-align: justify;">
                 M.Sc. at the Program of Petroleum Science and
-                Engineering at University of Campinas (FEM/UNICAMP)
+                Engineering at University of Campinas (FEM/UNICAMP).
               </p>
             </div>
           </div>
@@ -258,11 +257,13 @@
                   <h6><b>Tainá Souza</b></h6>
                   <p><b>Geophysicist</b></p>
                   <p><i>tsouza at ggaunicamp.com</i></p>
-                  <p><a href="http://lattes.cnpq.br/4540231833191608" target="_blank">Lattes</a></p>
+                  <p><a href="http://lattes.cnpq.br/4540231833191608" target="_blank">Lattes</a>
+                  <a href="www.linkedin.com/in/tatasouza"target="_blank">LinkedIn</a>
+                  </p>
                 </div>
               </div>
               <p style="text-align: justify;">
-                M.Eng. in Electrical Engineering at University of Campinas (FEEC/UNICAMP)
+                M.Eng. in Electrical Engineering at University of Campinas (FEEC/UNICAMP).
               </p><br>
             </div>
           </div>
@@ -284,13 +285,14 @@
                     <a href="http://lattes.cnpq.br/8674348451133485" target="_blank">Lattes</a>
                     <a href="https://www.researchgate.net/profile/Caian_Benedicto" target="_blank">ResearchGate</a>
                     <a href="https://github.com/caian" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/caian-benedicto-78791b29/"target="_blank">LinkedIn</a>
                   </p>
                 </div>
               </div>
               <p style="text-align: justify;">
                 B.Eng. in Computer Engineering by University of
                 Campinas (FEEC/UNICAMP) and former visiting student of
-                Computing Science at University of Alberta
+                Computing Science at University of Alberta.
               </p>
             </div>
           </div>
@@ -311,17 +313,17 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Alcides Goldoni Junior</b></h6>
-                  <p><b>System Administrator</b></p>
+               <p><b>System Administrator</b></p>
                   <p><i>goldoni at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/3193531699744390" target="_blank">Lattes</a>
-                    <a href="https://github.com/agoldonijr" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/agoldonijr" target="_blank">LinkedIn</a>
                   </p>
                 </div>
               </div>
               <p style="text-align: justify;">
-                Undergraduate student of Applied Mathematics at
-                University of Campinas (IMECC/UNICAMP)
+                Systems Analyst Technology Degree (Universidade Paulista - Unip) and an undergraduate student in Applied and Computational Mathematics (University of Campinas - IMECC/UNICAMP). 
+                <br><br>
               </p>
             </div>
           </div>
@@ -346,8 +348,7 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                Computer Science student at the Institute of
-                Computing at the University of Campinas (IC/UNICAMP)
+                IT Management Technology Degree (Universidade Paulista - Unip) and former student in Computer Science (University of Campinas - UNICAMP). 5+ years of experience as IT Project Manager in RD&I Projects related to High-Performance Computing and Seismic Imaging.
               </p>
             </div>
           </div>
@@ -375,8 +376,7 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                Undergraduate student of Statistic at
-                University of Campinas (IMECC/UNICAMP)
+                Systems Analyst Technology Degree (Universidade Paulista - Unip) and an undergraduate student in Mathematics (University of Campinas - IMECC/UNICAMP).
               </p>
             </div>
           </div>
@@ -401,8 +401,8 @@
               </div>
               <p style="text-align: justify;">
                 B.Eng. in Computer Engineering by Institute of
-                Computing at the University of Campinas (IC/UNICAMP)
-              </p>
+                Computing at the University of Campinas (IC/UNICAMP).
+              </p><br>
             </div>
           </div>
           <!-- End span -->  
@@ -430,7 +430,8 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                Computer Engineering student at the Institute of Computing at the University of Campinas (IC/UNICAMP)
+                B.Eng. in Computer Engineering by Institute of
+                Computing at the University of Campinas (IC/UNICAMP).
               </p>
             </div>
            </div>
@@ -468,7 +469,7 @@
               </div>
               <p style="text-align: justify;">
                 PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at
-                University of Campinas
+                University of Campinas.
               </p>
             </div>
           </div>
