Update Members Information

--- a/team.html
+++ b/team.html
@@ -468,8 +468,7 @@
                 </div>
               </div>
               <p style="text-align: justify;">
-                PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at
-                University of Campinas.
+                PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at University of Campinas. In 2019 joined as postdoc position at HPG lab working in seismic imaging using full wave equation (FWE).
               </p>
             </div>
           </div>
@@ -497,7 +496,7 @@
               </div>
               <p style="text-align: justify;">
                 PhD in Science and Petroleum Engineering at University of Campinas.
-              </p><br>
+              </p><br><br><br>
             </div>
           </div>
           <!-- End span -->
