Added New Project

--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,28 @@
           </div>
         </div>
 
-        <div class="row">
+         <div class="row">
+          <div class="span12">
+            <div class="team-box thumbnail">
+              <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
+                <div class="span1 aligncenter" style="margin-left: 10px; margin-right: 10px;">
+                  <img
+                    style="box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.23); border-radius: 5px; width: 100px; max-width: 150%"
+                    src="img/hpg/projects/petrobras.png" />
+                </div>
+                <div class="span10">
+                  <h6 style="text-align: justify;"><b>Separation of diffractions in finite offset domain in OBN datasets</b></h6>
+                </div>
+              </div>
+              <p style="text-align: justify;">Research and development of seismic processing techniques in the finite offset domain specific to Ocean Bottom Nodes (OBN) acquisition geometries. These techniques are part of an OBN Package comprising: 1) Development of the mathematical formulation and implementation of the Common Reflection Point (CRP) regularization. 2) Development of the mathematical formulation and implementation of a diffraction separation algorithm in the finite offset domain. 3) Conducting feasibility studies of a seismic tomography based on CRP gathers in OBN geometries.
+              </p>
+            </div>
+          </div>
+          <!-- End span -->
+        </div>
+        <!-- End Row -->
+
+<div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
               <div class="row" style="margin-left: 0px; margin-bottom: 10px;">
