Remove Sections in Technologies tab

--- a/technologies.html
+++ b/technologies.html
@@ -136,7 +136,9 @@
           </div>
         </div>
 
-        <div class="row">
+        <!-- Remove Section-->
+
+        <!-- <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
               <h4><b>2D/3D Total Moveout Correction</b></h4>
@@ -154,6 +156,8 @@
           </div>
         </div>
 
+        -->
+   
         <!-- referncia para home -->
         <span id="hpcAndCloud" class="anchor"></span>
 
@@ -185,8 +189,12 @@
             </div>
           </div>
         </div>
+        
+        <!--Remove Section-->
+        
+        <!-- referencia para home -->
 
-        <!-- referncia para home -->
+        <!--
         <span id="timeMigration" class="anchor"></span>
 
         <div class="row">
@@ -215,7 +223,7 @@
             </div>
           </div>
         </div>
-
+      -->
         <!-- referncia para home -->
         <span id="zoStacking" class="anchor"></span>
 
@@ -303,8 +311,9 @@
           </div>
         </div>    
 
-
+        <!--Remove Section-->
         <!-- referncia para home -->
+<!--
         <span id="timeToDepth" class="anchor"></span>
 
         <div class="row">
@@ -330,7 +339,7 @@
             </div>
           </div>
         </div>
-
+        -->
       </div>
     </section>
 
